fix: add mock, junit test