@@ -43,4 +43,19 @@ dependencies {
 
     // ModelMapper
     implementation("org.modelmapper:modelmapper:3.2.0")
+
+    // JUnit 5
+    testImplementation("org.junit.jupiter:junit-jupiter:5.10.0")
+
+    // Mockito core
+    testImplementation("org.mockito:mockito-core:5.12.0")
+
+    // Mockito + JUnit 5 integration (cho @ExtendWith(MockitoExtension::class))
+    testImplementation("org.mockito:mockito-junit-jupiter:5.12.0")
+
+}
+
+tasks.test {
+    useJUnitPlatform()
+    jvmArgs = listOf("-XX:+EnableDynamicAgentLoading", "-Xshare:off")
 }
